fix: address SonarQube code smells in entity and tests